Close mobile menu dropdown on navigation and fix z-index layering
- Close menu-item dropdown when pathname changes
- Bump .wallets z-index above home-about section
- Add buy-btn margin-left to header

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -39,6 +39,7 @@
 
     .buy-btn {
         margin-left: 16px;
+        margin-right: 14px;
     }
 
     // &:before {
