--- a/src/components/wallets/index.scss
+++ b/src/components/wallets/index.scss
@@ -129,7 +129,7 @@
     flex-direction: column;
     gap: 8px;
     // background-color: red;
-    z-index: 150;
+    z-index: 10000;
 
     .chain-sidebar__header {
         h2 {
